--- a/src/app/vehicle/vehicle-details/vehicle-details.component.html
+++ b/src/app/vehicle/vehicle-details/vehicle-details.component.html
@@ -10,6 +10,6 @@
   </ul>
 </div>
 <button type="button" routerLink="reserve">Réserver</button>
-<button [routerLink]="['/vehicles']" *ngIf="isAdmin" (click)="confirmDelete(vehicleDetails.id)">
+<button *ngIf="isAdmin" (click)="confirmDelete(vehicleDetails.id)">
   Supprimer
 </button>
