searchform message d'erreur

--- a/src/app/vehicle/vehicle-list/vehicle-list.component.html
+++ b/src/app/vehicle/vehicle-list/vehicle-list.component.html
@@ -1,16 +1,21 @@
-<h2>trouvez rapidement un véhicule de service !</h2>
+<h2>Trouvez rapidement un véhicule de service !</h2>
 <div class="form-liste">
-<form #f="ngForm" (submit)="f.valid && recherche()">
+  <form #f="ngForm" (submit)="recherche()">
     <label for="debutreservation">Début de la réservation</label>
-    <input type="datetime-local" id="debutreservation" name="debutreservation"  [(ngModel)]="reservationStart" required=""><br>
+    <input type="datetime-local" id="debutreservation" name="debutreservation" [(ngModel)]="reservationStart" #start="ngModel" required><br>
     <label for="finreservation">Fin de la réservation</label>
-    <input type="datetime-local" id="finreservation" name="finreservation"  [(ngModel)]="reservationEnd" required>
-    <button type="submit">trouver véhicule</button>
-</form>
+    <input type="datetime-local" id="finreservation" name="finreservation" [(ngModel)]="reservationEnd" #end="ngModel" required>
+    <button type="submit">Trouver un véhicule</button>
+    <div *ngIf="(start.invalid || end.invalid) && f.submitted && f.invalid " class="error-message">
+      Veuillez sélectionner des dates avant de cliquer sur "trouver un véhicule".
+    </div>
+  </form>
+</div>
 
 <div class="list">
+  <ul>
     <li *ngFor="let vehicle of vehiclesToDisplay">
       <app-vehicle-card [vehicle]="vehicle"></app-vehicle-card>
     </li>
-  </div>
- 
+  </ul>
+</div>
