--- a/src/app/misc/header/header.component.html
+++ b/src/app/misc/header/header.component.html
@@ -1,14 +1,13 @@
 <header>
-    
         <div class="logo">
-          <a routerLink="vehicles"> <img  class ="logo" src="assets/images/logo_site_carfleet.png" alt="logo"></a>
+          <a routerLink="vehicles"><img class="logo-img" src="assets/images/logo_site_carfleet.png" alt="logo"></a>
         </div>
 
         <h2> La réservation facile de votre véhicule de service </h2> 
 <div class="menu">
     <ul>
-        <a routerLink="vehicles/search"> Recherche </a><br>
-        <a routerLink="reservations">Réservations</a>
+        <a routerLink="vehicles/search"><img src="assets/images/logo-search.png" class="logo-link" alt="logo-search"> Recherche </a><br>
+        <a routerLink="reservations"><img src="assets/images/logo-reservation.png" class="logo-link"  alt="logo-reservation"> Réservations</a>
     </ul>
 
 
