--- a/src/app/misc/footer/footer.component.css
+++ b/src/app/misc/footer/footer.component.css
@@ -4,7 +4,12 @@ footer{
 position: static;
     bottom: 0;
     width: 100%;
-    height: 130px;
+    min-height: 130px;
+    box-shadow: lightgray 3px 3px 7px;
+    border-radius: 5px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
 }
 
 .footer-links a {
@@ -13,7 +18,17 @@ position: static;
     /* padding: 10px; */
     margin: 0;
     color: white;
-    display: block;
+    display: flex;
+ 
+    align-items: left;
     font-size: 1em;
   text-align: left;
+}
+
+p {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-weight: bolder;
+    
 }
