--- a/src/app/misc/header/header.component.css
+++ b/src/app/misc/header/header.component.css
@@ -1,39 +1,91 @@
 .logo {
-    height: 80%;
-    width: auto;
-   margin-top: 5%;
-   margin-left: 5%;
-    border-radius: 50%;
+  height: 80%;
 
+  a {
+    justify-content: space-around;
+    text-decoration: none;
+    color: whitesmoke;
+  }
+}
+.logo a {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-left: 5px;
+  height: 100%;
+  font-size: 0px;
+}
+
+.logo-img {
+  height: 80%;
+  border-radius: 50%;
+}
+
+.menu {
+  font-size: 0px;
+  margin-right: 25px;
+}
+
+.logo-link {
+  height: 30px;
+  vertical-align: middle;
 }
 
 header {
-    background-color: rgba(34, 97, 117, 1);
-    border-bottom: 1px solid #eee;
-    height: 130px;
-    width: 100%;
-    border-radius: 5px;
-    display: flex;
-    align-items: center;
-    box-shadow: lightgray 3px 3px 7px;
-    
- 
+  background-color: rgba(34, 97, 117, 1);
+  border-bottom: 1px solid #eee;
+  height: 150px;
+  width: 100%;
+  border-radius: 5px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  box-shadow: lightgray 3px 3px 7px;
 }
 
 h2 {
-    font-size: 1em;
-    margin: 0;
-    /* margin-left: 20px; */
-    line-height: 1.2em;
-    font-family: 'Roboto', sans-serif;
-    color: whitesmoke;
-    text-align: center;
+  font-size: 0.9em;
+  margin: 10px;
+  display: flex;
+  line-height: 1.2em;
+  font-family: "Roboto", sans-serif;
+  color: whitesmoke;
+  text-align: center;
+  justify-content: space-around;
+}
+
+ul {
+  padding: 0 10px;
+}
+
+@media screen and (min-width: 768px) {
+  header {
+    display: flex;
     justify-content: space-around;
+  }
+  h2 {
+    max-width: 40%;
+    font-size: x-large;
+  }
 
-}
+  .logo {
+    height: 100%;
+  }
 
-a {
-    text-decoration: none;
+  ul {
+    align-items: center;
+    padding: 0;
+  }
+
+  a {
+    vertical-align: middle;
     color: whitesmoke;
-}
+    text-decoration: none;
+    display: flex;
+    justify-content: space-around;
+  }
 
+  .menu {
+    font-size: 15px;
+  }
+}
