--- a/src/app/reservation/reservation-card/reservation-card.component.html
+++ b/src/app/reservation/reservation-card/reservation-card.component.html
@@ -1,4 +1,4 @@
-<div id="cardBox" [ngClass]="resaStyleClass" [routerLink]="reservation.id">
+<div id="cardBox" [ngClass]="resaStyleClass" [routerLink]="['/reservations/', reservation.id]">
     <div id="resaCardHeader"><span>Réservation n°{{reservation.id}}{{reservationPlaceCode}}</span><span>Statut : {{resaStatus}} le <span *ngIf="resaStatus == 'terminée'; else elseBlock">{{reservation.end_Date | date:'dd/MM/yyyy'}}</span></span></div>
     <ng-template #elseBlock>{{reservation.start_Date | date:'dd/MM/yyyy'}}</ng-template>
     <span>Réservation pour la période du {{reservation.start_Date | date:'dd/MM/yyyy'}} {{reservation.start_Date | date:'h:mm'}} au {{reservation.end_Date | date:'dd/MM/yyyy'}} {{reservation.end_Date | date:'h:mm'}} à {{vehiclePlace}}.</span>
