--- a/src/app/misc/header/header.component.css
+++ b/src/app/misc/header/header.component.css
@@ -1,12 +1,17 @@
 .logo {
   height: 80%;
+  margin: 20px;
 
+}
   a {
-    justify-content: space-around;
+
     text-decoration: none;
     color: whitesmoke;
+    margin-bottom: 10px;
+    
+  
   }
-}
+
 .logo a {
   display: flex;
   align-items: center;
@@ -17,7 +22,7 @@
 }
 
 .logo-img {
-  height: 80%;
+  max-height: 80%;
   border-radius: 50%;
 }
 
@@ -28,15 +33,20 @@
 
 .logo-link {
   height: 30px;
-  vertical-align: middle;
+  vertical-align: baseline;
+  margin-right: 0;
+  margin-left: 20px;
+  margin-top: 10px;
+
 }
 
 header {
-  background-color: rgba(34, 97, 117, 1);
+  background: rgb(80,78,111);
+  background: linear-gradient(90deg, rgba(80,78,111,1) 0%, rgba(15,134,158,1) 100%, rgba(0,212,255,1) 100%, rgba(34,97,117,0.01) 100%);
   border-bottom: 1px solid #eee;
   height: 150px;
   width: 100%;
-  border-radius: 5px;
+  border-radius: 10px;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -56,6 +66,7 @@ h2 {
 
 ul {
   padding: 0 10px;
+  
 }
 
 @media screen and (min-width: 768px) {
@@ -72,6 +83,10 @@ ul {
     height: 100%;
   }
 
+  .logo-link {
+    margin-right: 10px;
+  }
+
   ul {
     align-items: center;
     padding: 0;
@@ -82,7 +97,7 @@ ul {
     color: whitesmoke;
     text-decoration: none;
     display: flex;
-    justify-content: space-around;
+
   }
 
   .menu {
