--- a/src/app/misc/header/header.component.html
+++ b/src/app/misc/header/header.component.html
@@ -6,12 +6,10 @@
         <h2> La réservation facile de votre véhicule de service </h2> 
 <div class="menu">
     <ul>
-        <a routerLink="vehicles/search"><img src="assets/images/logo-search.png" class="logo-link" alt="logo-search"> Recherche </a><br>
-        <a routerLink="reservations"><img src="assets/images/logo-reservation.png" class="logo-link"  alt="logo-reservation"> Réservations</a>
-        <a routerLink="vehicles/search"> Recherche </a><br>
-        <a routerLink="reservations">Réservations</a><br>
-        <a routerLink="admin">Admin</a>
-        <a href="" (click)="logout()">Déconnexion</a>
+        <a routerLink="vehicles/search"><img src="assets/images/icon-search.png" class="logo-link" alt="icon-search"> Recherche </a>
+        <a routerLink="reservations"><img src="assets/images/icon-reservation.png" class="logo-link"  alt="icon-reservation"> Réservations</a>
+        <span *ngIf=getUserRole() == "ADMIN"><a routerLink="admin"></a></span>
+        <a href="" (click)="logout()"><img src="assets/images/icon-deconnexion.png" class="logo-link" alt="icon-deconnexion"> Déconnexion</a>
     </ul>
 
 
