--- a/src/app/vehicle/vehicle-card/vehicle-card.component.css
+++ b/src/app/vehicle/vehicle-card/vehicle-card.component.css
@@ -9,15 +9,14 @@
   flex-direction: column;
   justify-content: space-between;
   box-shadow: 08px 08px 10px 5px #818080;
-    box-sizing: border-box;
-    background-color:rgb(	193,	211,	215)
+  background-color:rgb(	193,	211,	215)
 }
 
 a {
   text-decoration: none;
   color: black;
   font-family: 'Roboto', sans-serif;
-  font-weight: 400;
+  font-weight: 999;
 display: flex ;
 text-align: center;
 justify-content: center;
@@ -31,4 +30,14 @@ margin: 3%;
     display: flex;
     align-items: center;
   
+}
+
+@media screen and (min-width: 768px){
+
+ .vehicle-card {
+width: 500px;
+height: 400px;
+    max-width: 60%;
+    font-size: x-large;
+  }
 }
