--- a/src/app/vehicle/vehicle-list/vehicle-list.component.css
+++ b/src/app/vehicle/vehicle-list/vehicle-list.component.css
@@ -1,19 +1,22 @@
-body {
-    background-color: blue;
+button{
+    display: flex;
+    max-width: 60%;
+    justify-content: center;
+    align-items: center;
 }
 
 .form-liste{
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    max-width: 60% ;
     align-items: center;
-    margin: 10% 10% 10% 10%;
+    margin: auto;
     background-color:rgb(203, 224, 230);
     color: whitesmoke;
     border-radius: 5px;
     border: 1px solid #eee;
     box-shadow: 0 2px 3px #ccc;
-    max-width: 100%;
+    
 }
 
 .list{
@@ -25,9 +28,31 @@ body {
     display: block;
     font-size: 1em;
   text-align: center;
+  justify-content: center;
+}
+
+.list ul {
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 0;
 }
 
 
 .error-message {
     color: red;
+}
+@media screen and (min-width: 768px){
+
+    .form-liste{
+
+    max-width: 40%;
+
+}
+
+form {
+
+    height: 20%;
+}
 }
