--- a/src/app/vehicle/vehicle-add/vehicle-add.component.css
+++ b/src/app/vehicle/vehicle-add/vehicle-add.component.css
@@ -1,3 +1,51 @@
-form {
-    margin-top: 10%;
+#addVehicleBody {
+    display: flex;
+    justify-content: center;
+}
+
+#vehicleForm {
+    margin: 2rem 0;
+    padding: 10px 0;
+    width: 80vw;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: lightgray;
+}
+
+#brandField {
+    display: flex;
+    flex-direction: column;
+}
+
+#modelInfo {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#vehiclePreview {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+select {
+    margin-bottom : 0.5rem;
+    width: 10rem;
+}
+
+input {
+    width: 10rem;
+    margin-bottom: 0.5rem;
+}
+
+img {
+    margin-bottom: 0.5rem;
+    width: 75%
+}
+
+span {
+    display: inline-block;
+    margin-bottom: 0.5rem;
 }
