--- a/src/app/vehicle/vehicle-add/vehicle-add.component.html
+++ b/src/app/vehicle/vehicle-add/vehicle-add.component.html
@@ -54,19 +54,22 @@
           <span>{{ vehicle.nbSeats }}</span>
         </div>
         <img [src]="vehicle.image" />
-        <div>
-          <label for="licencePlate">Immatriculation</label><br />
+        <div id="immatValidation">
+          <label for="licencePlate">Immatriculation</label>
           <input
             [(ngModel)]="licencePlate"
             type="text"
             id="licencePlate"
             name="licencePlate"
+            pattern="^[A-Z]{2}[-][0-9]{3}[-][A-Z]{2}$"
+            placeholder="AB-123-CD"
             required
           />
+          <span *ngIf="addvehicleForm.invalid && addvehicleForm.submitted" id="immatInvalid">Veuillez entrer une immatriculation valide</span>
         </div>
+        <button type="submit">Ajouter</button>
       </div>
     </div>
 
-    <button type="submit">Ajouter</button>
   </form>
 </div>
