files css popUp

--- a/src/app/vehicle/vehicle-details/vehicle-details.component.html
+++ b/src/app/vehicle/vehicle-details/vehicle-details.component.html
@@ -12,6 +12,6 @@
  
 </div>
 
-<button *ngIf="isAdmin" (click)="confirmDelete(vehicleDetails.id)">
+<button mat-button *ngIf="isAdmin" (click)="confirmDelete(vehicleDetails.id)">
   Supprimer
 </button>
