files popUp css

--- a/src/app/delete-success-dialog/delete-success-dialog.component.html
+++ b/src/app/delete-success-dialog/delete-success-dialog.component.html
@@ -2,6 +2,6 @@
   <div class="dialog-content">
     <h1>Suppression réussie</h1>
     <p>{{ data.message }}</p>
-    <button mat-button (click)="onCloseClick()">Fermer</button>
+    <button (click)="onCloseClick()">Fermer</button>
   </div>
 </div>
