--- a/src/app/confirm-dialog/confirm-dialog.component.css
+++ b/src/app/confirm-dialog/confirm-dialog.component.css
@@ -29,5 +29,13 @@
   button {
     font-size: 10px;
     margin: 5px;
-  }
+    text-decoration: none;
+    color: #fff;
+    font-weight: bold;
+    background-color: #538fbe;
+    padding: 10px 70px;
+    border: 1px solid #2d6898;
   
+  }
+
+ 
