--- a/src/app/confirm-dialog/confirm-dialog.component.html
+++ b/src/app/confirm-dialog/confirm-dialog.component.html
@@ -1,9 +1,7 @@
-<!-- Dans le template du composant de dialogue (confirm-dialog.component.html) -->
 <div [@fadeInOut]="true" class="dialog-container">
     <div class="dialog-content">
       <h1>{{ data.message }}</h1>
-      <button mat-button (click)="yesClick()">Oui</button>
-      <button mat-button (click)="onNoClick()">Non</button>
+      <button class="yes-button" (click)="yesClick()">Oui</button>
+      <button class="no-button" (click)="onNoClick()">Non</button>
     </div>
   </div>
-  
