--- a/src/app/user/login/login.component.css
+++ b/src/app/user/login/login.component.css
@@ -66,14 +66,13 @@ h2 {
 }
 
 .invalid-message {
-  margin-top: 5px;
-  color: #ffffff;
-  font-size: 18px;
-  text-align: center;
-  background-color: #ff0000;
-  padding: 5px;
-  border-radius: 5px;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  margin-bottom: 20px;
-  font-family: "Comic Neue", cursive;
+  opacity: 1;
+  margin-top: 3px;
+  color: #f60303;
+  font-size: 10px;
+  text-align: left;
+
+  padding: 3px;
+
+  margin-bottom: 17px;
 }
