--- a/src/app/user/login/login.component.html
+++ b/src/app/user/login/login.component.html
@@ -29,7 +29,15 @@
             !nameInput.invalid || nameInput.pristine || nameInput.value === ''
           "
         >
-          bla bla bla
+          <div *ngIf="nameInput.errors?.['required']" class="invalid-message">
+            Le champ de message est obligatoire.
+          </div>
+          <div
+            *ngIf="nameInput.errors?.['minlength'] || nameInput.errors?.['maxlength']"
+            class="invalid-message"
+          >
+            ⚠️ Veuillez rentrer un n°CP valide.
+          </div>
         </div>
       </div>
 
