--- a/src/app/vehicle/vehicle-details/vehicle-details.component.html
+++ b/src/app/vehicle/vehicle-details/vehicle-details.component.html
@@ -1,17 +1,23 @@
 <div id="details_vehicle">
   <h2>{{ vehicleDetails.model.brand }} {{ vehicleDetails.model.modelName }}</h2>
-  <img [src]="vehicleDetails.model.image" />
+  <img class="car-img"[src]="vehicleDetails.model.image" />
   <ul>
     <li>Type : {{ vehicleDetails.model.type }}</li>
     <li>Energie : {{ vehicleDetails.model.energy }}</li>
     <li>Nombre de portes : {{ vehicleDetails.model.nbDoors }}</li>
     <li>Nombre de sièges : {{ vehicleDetails.model.nbSeats }}</li>
     <li>{{ vehicleDetails.fleet.place }}</li>
-    <button type="button" routerLink="reserve">Réserver</button>
   </ul>
- 
+  
 </div>
-
-<button *ngIf="isAdmin" (click)="confirmDelete(vehicleDetails.id)">
+<div class="buttonCar">
+<div class="button reserver">
+<button type="button" routerLink="reserve">Réserver</button>
+</div>
+  
+<div class="button supprimer">
+<button mat-button *ngIf="isAdmin" (click)="confirmDelete(vehicleDetails.id)">
   Supprimer
 </button>
+</div>
+</div>
