--- a/src/styles.css
+++ b/src/styles.css
@@ -44,5 +44,6 @@ button {
 @media screen and (min-width: 768px) {
   #page-content {
     background-image: url("assets/images/backgroundCars.png");
+    background-repeat: no-repeat;
   }
 }
