--- a/src/app/reservation/reservation/reservation.component.html
+++ b/src/app/reservation/reservation/reservation.component.html
@@ -1,11 +1,37 @@
-<form #resa_form="ngForm" (ngSubmit)="resa_form.valid && submitReservation()" id="resaForm">
-    <label for="startDate">Date et heure de début</label>
-    <input type="datetime-local" id="startDate" name="startDate" [(ngModel)]="start_Date" [min]="todayString" required>
-    <label for="endDate">Date et heure de fin</label>
-    <input type="datetime-local" id="endDate" name="endDate" [(ngModel)]="end_Date" [min]="todayString" required>
+<form
+  #resa_form="ngForm"
+  (ngSubmit)="resa_form.valid && submitReservation()"
+  id="resaForm"
+>
+  <label for="startDate">Date et heure de début</label>
+  <input
+    type="datetime-local"
+    id="startDate"
+    name="startDate"
+    [(ngModel)]="start_Date"
+    [min]="todayString"
+    required
+  />
+  <label for="endDate">Date et heure de fin</label>
+  <input
+    type="datetime-local"
+    id="endDate"
+    name="endDate"
+    [(ngModel)]="end_Date"
+    [min]="todayString"
+    required
+  />
 
-    <label form="reason">Motif de la réservation: </label>
-    <input type="text" id="reason" name="reason" [(ngModel)]="reasonReservation" required>
+  <label form="reason">Motif de la réservation: </label>
+  <input
+    type="text"
+    id="reason"
+    name="reason"
+    [(ngModel)]="reasonReservation"
+    required
+  />
 
-    <button type="submit" id="reserveButton">Réserver</button>
+  <button type="submit" id="reserveButton" (click)="submitReservation()">
+    Réserver
+  </button>
 </form>
