css vehicle list , search , header...

--- a/src/app/misc/header/header.component.html
+++ b/src/app/misc/header/header.component.html
@@ -2,8 +2,13 @@
         <div class="logo">
           <a routerLink="vehicles"><img class="logo-img" src="assets/images/logo_site_carfleet.png" alt="logo"></a>
         </div>
+<div class="title">
+<img class="titre" src="assets/images/title.png" alt="titre">
+<img class="logo-titre" src="assets/images/sncf_logo_blanc.png" alt="logo sncf">
+<h2> La réservation facile de votre véhicule de service </h2> 
 
-        <h2> La réservation facile de votre véhicule de service </h2> 
+</div>
+       
 <div class="menu">
     <ul>
         <a routerLink="vehicles/search"><img src="assets/images/icon-search.png" class="logo-link" alt="icon-search"> Recherche </a>
