--- a/src/app/vehicle/vehicle-list/vehicle-list.component.html
+++ b/src/app/vehicle/vehicle-list/vehicle-list.component.html
@@ -5,7 +5,7 @@
     <input type="datetime-local" id="debutreservation" name="debutreservation" [(ngModel)]="reservationStart" #start="ngModel" required><br>
     <label for="finreservation">Fin de la réservation</label><br>
     <input type="datetime-local" id="finreservation" name="finreservation" [(ngModel)]="reservationEnd" #end="ngModel" required><br>
-    <button type="submit">Trouver un véhicule</button>
+    <button class="btn"  type="submit">Trouver un véhicule</button>
     <div *ngIf="(start.invalid || end.invalid) && f.submitted && f.invalid " class="error-message">
       Veuillez sélectionner des dates avant de cliquer sur "trouver un véhicule".
     </div>
@@ -13,9 +13,9 @@
 </div>
 
 <div class="list">
-  <ul>
+
     <li *ngFor="let vehicle of vehiclesToDisplay">
       <app-vehicle-card [vehicle]="vehicle"></app-vehicle-card>
-    </li>
-  </ul>
+
 </div>
+
