--- a/src/app/vehicle/vehicle-list/vehicle-list.component.css
+++ b/src/app/vehicle/vehicle-list/vehicle-list.component.css
@@ -1,58 +1,116 @@
-button{
+h2{
     display: flex;
-    max-width: 60%;
     justify-content: center;
-    align-items: center;
+    text-align: center;
+}
+
+
+button{
+  
+    max-width: 60%;
+   justify-content: center;
+
 }
 
 .form-liste{
     display: flex;
     flex-direction: column;
-    max-width: 60% ;
+    max-width: 80% ;
     align-items: center;
     margin: auto;
-    background-color:rgb(203, 224, 230);
+    background-color:rgb(103, 150, 164);
     color: whitesmoke;
     border-radius: 5px;
     border: 1px solid #eee;
     box-shadow: 0 2px 3px #ccc;
+    margin-bottom: 30px;
     
 }
 
-.list{
+
+.list , .list-reverse {
     list-style-type: none;
     text-decoration: none;
     /* padding: 10px; */
     margin: 0;
-    color: white;
-    display: block;
+    color: rgb(241, 34, 34);
+justify-content: space-around;
     font-size: 1em;
   text-align: center;
-  justify-content: center;
+
+
+  
 }
 
-.list ul {
+form{
+    justify-content: center;
+   
+}
+
+/* .list ul {
 
     display: flex;
     flex-direction: column;
     justify-content: center;
     padding: 0;
-}
+} */
+
+
 
 
 .error-message {
     color: red;
 }
 @media screen and (min-width: 768px){
-
-    .form-liste{
-
-    max-width: 40%;
+.list{
+display: flex;
+justify-content: space-around;
+flex-wrap: nowrap;
+width: 100%;
+/* animation-name: scroll;
+animation: scroll 50s linear infinite  ; */
+padding: 10px;
+overflow-x:scroll;
+white-space: normal;
+display: flex;
+flex-wrap: nowrap;
 
 }
+.label {
 
-form {
+    display: flex;
+    justify-content: space-around;
+}
 
-    height: 20%;
+
+.list:hover{
+
+    width: 120%;
+}
+/* .list-reverse{
+    display: flex;
+    flex-wrap: nowrap;
+    width: 100%;
+    animation-name:scrollReverse; 
+    animation: scrollReverse 420s linear infinite ;
+    padding: 10px;
+    overflow:hidden;
+   
+  
+    } */
+
+
+.form-liste{
+
+    margin-bottom: 50px;
+    height: 350px;
 }
 }
+  /* @keyframes scroll {
+    100% {
+      transform: translateX(0%); 
+    }
+    0% {
+      transform: translateX(100%); 
+    }
+  } */
