--- a/src/app/vehicle/vehicle-search/vehicle-search.component.css
+++ b/src/app/vehicle/vehicle-search/vehicle-search.component.css
@@ -93,4 +93,11 @@ li{
 
 @media screen and (min-width: 768px){
 
+.search-card{
+
+    display: flex;
+  flex-direction: column;
+    justify-content: space-around;
+}
+
 }
