--- a/src/app/vehicle/vehicle-search/vehicle-search.component.html
+++ b/src/app/vehicle/vehicle-search/vehicle-search.component.html
@@ -4,7 +4,7 @@
 
     <label for="start">Jour et heure de début</label><br />
 
-    <input
+    <input class="calendar"
       type="datetime-local"
       id="start"
       name="start"
@@ -13,7 +13,7 @@
     /><br />
 
     <label for="end">Jour et heure de fin</label><br />
-    <input
+    <input class="calendar"
       type="datetime-local"
       id="end"
       name="end"
