--- a/src/app/delete-success-dialog/delete-success-dialog.component.css
+++ b/src/app/delete-success-dialog/delete-success-dialog.component.css
@@ -4,7 +4,7 @@
     justify-content: center;
     align-items: center;
     height: 100%;
-    background-color: rgba(109, 134, 167, 0.5); /* Arrière-plan semi-transparent */
+    background-color: rgba(109, 134, 167, 0.5); 
     position: fixed;
     top: 0;
     left: 0;
@@ -21,7 +21,7 @@
     text-align: center;
   }
   h1{
-    font-size:15px;
+    font-size:25px;
   
 }
     
@@ -35,6 +35,7 @@
     background-color: #538fbe;
     padding: 10px 70px;
     border: 1px solid #2d6898;
+
   
   }
 
